# llm_studies

./: .gitignore  pyproject.toml  readme.md  topics.canvas
databricks/large_language_models_llms_application_through_production/: GenAI01 - Text to text prompt engineering basics and use cases.pptx
databricks/large_language_models_llms_application_through_production/course_examples/: large-language-models.dbc
deeplearning_ai/open_source_models_w_hugging_face/audio_reading/descriptive/: 01_read_audio.ipynb
deeplearning_ai/open_source_models_w_hugging_face/course_examples/: L2_NLP.ipynb  L8_object_detection.ipynb
langchain/lang_graph/materials/langchain-academy-main/: langchain-academy-readme.md
langchain/lang_graph/notes/: lang-graph-private-notes.md
langchain/lang_graph/workshop/: 001_gtrp_agentic_workflow_HF_locally.ipynb  002_gtrp_agentic_workflow.ipynb  002_gtrp_agentic_workflow_openai.ipynb  003_gtrp_agentic_workflow_HF_locally.ipynb  003_gtrp_agentic_workflow_openai_llama3.1_locally.ipynb  004_gtrp_agentic_workflow_openai_llama3.1+3.2_locally.ipynb  pyproject.toml
langchain/lang_graph/workshop/hf_tools/: GPT4oImageDescription.py  PythonRepl.py  Similarities.py
langchain/lang_graph/workshop/langgraph_tools/: GPT4oImageDescription.py  LLamaSummarization.py  PythonRepl.py  RewardSpecialist.py  Similarities.py  utils.py
my_articles_pt-br/: Deep Learning.gslides
nvidia/generative_ai_with_diffusion_models/workshop/: 01_UNets.ipynb  02_Diffusion_Models.ipynb  03_Optimizations.ipynb  04_Classifier_Free_Diffusion.ipynb  05_CLIP.ipynb  06_Assessment.ipynb
stanford/CS236-deep-generative-models/notes/: cs-236-private-notes.md  private-notes.md
