[tool.poetry]
name = "llm-studies"
version = "0.1.0"
description = ""
authors = ["Gabriel Pehls <gabrielpehls@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.3"
pyaudio = "^0.2.14"
librosa = "^0.10.1"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
