[tool.poetry]
name = "llm-studies"
version = "0.1.0"
description = ""
authors = ["Gabriel Pehls <gabrielpehls@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.3"
pyaudio = "^0.2.14"
librosa = "^0.10.1"
ffmpeg = "^1.4"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langchain-experimental = "^0.3.0"
nltk = "^3.9.1"
langchain-openai = "^0.2.0"
langgraph = "^0.2.21"
huggingface-hub = "^0.24.7"
transformers = "4.44.2"
jinja2 = "^3.1.4"
accelerate = "^0.34.2"
bitsandbytes = "^0.44.0"
iprogress = "^0.4"
pillow = "^10.4.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
